# ecommerce

./: .gitignore  Makefile  pyproject.toml
src/: main.py
src/config/: config.py  controllers.py
src/routers/: category.py  migracion.py  models.py  novedad.py  novedadproductos.json  recepcion.py
src/utils/: utils.py
